--- a/src/style/common.css
+++ b/src/style/common.css
@@ -1,5 +1,6 @@
 body {
     background-color: #212121;
+    margin-bottom: 50px;
 }
 
 .text-light {
@@ -12,4 +13,9 @@ body {
 
 .container {
     text-align: center;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
