--- a/src/style/leaderboard.css
+++ b/src/style/leaderboard.css
@@ -1,9 +1,7 @@
-table{
+table {
     border: grey 1px solid;
     text-align: center;
-    width: 80%;
-    max-width: 1110px;
-    margin: 0 auto;
+    width: 100%;
 }
 
 table > thead > tr {
@@ -28,4 +26,9 @@ table > tbody > tr:nth-child(even) {
 
 .text-draw {
     color: #90ee90;
+}
+
+
+input:focus, select:focus {
+    outline: skyblue solid 1px;
 }
