--- a/src/style/common.css
+++ b/src/style/common.css
@@ -3,8 +3,26 @@ body {
     margin-bottom: 50px;
 }
 
+main {
+    display: block;
+}
+
+input, select {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    overflow: visible;
+    max-width: 95%;
+}
+
+
 .text-light {
     color: #f8f9fa!important;
+}
+
+.bg-dark {
+    background-color: #343A40!important;
 }
 
 .navbar {
@@ -18,4 +36,125 @@ body {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+@media (max-width: 576px) {
+    .container {
+        max-width: 100%;
+    }
+
+}
+
+@media (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .container {
+        max-width: 1320px;
+    }
+}
+
+
+.row {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    flex-wrap: wrap;
+}
+
+.col-12 {
+    grid-column: span 12;
+}
+
+.col-6 {
+    grid-column: span 6;
+}
+
+.col-4 {
+    grid-column: span 4;
+}
+
+.col-3 {
+    grid-column: span 3;
+}
+
+.col-2 {
+    grid-column: span 2;
+}
+
+.col-1 {
+    grid-column: span 1;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    background-color: #343A40;
+    background-clip: padding-box;
+    border: 1px solid #343A40;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.from-row {
+    display: flex;
+    flex-wrap: wrap;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.from-row > .col {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.mb-3 .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.pb-3, .py-3 {
+    padding-bottom: 1rem!important;
+    width: 80%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: .5rem;
 }
