--- a/src/style/common.css
+++ b/src/style/common.css
@@ -82,15 +82,15 @@ nav > ul > li > a:hover{
     background-color: #343A40;
     width: 80%;
     margin: 0 auto 20px auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .container {
     text-align: center;
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 0;
+    padding-left: 0;
     margin-right: auto;
     margin-left: auto;
 }
@@ -205,9 +205,10 @@ nav > ul > li > a:hover{
 
 .pb-3, .py-3 {
     padding-bottom: 1rem!important;
-    width: 80%;
-    padding-left: 15px;
-    padding-right: 15px;
+    width: 90%;
+    max-width: 2040px;
+    padding-left: 0;
+    padding-right: 0;
     margin: 0 auto;
 }
 
