--- a/src/style/info.css
+++ b/src/style/info.css
@@ -2,6 +2,7 @@
     background-color: #2B2B2B;
     padding: 10px 20px 20px 20px;
     margin-bottom: 20px;
+    margin-right: 5%;
 }
 
 .info-container > li {
