--- a/src/style/about.css
+++ b/src/style/about.css
@@ -1,9 +1,15 @@
-.container > p > a {
+.container > div {
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: left;
+}
+
+.container > div > p > a {
     text-decoration: underline;
     color: #f8f9fa;
 }
 
-.container> p > a:hover {
+.container> div > p > a:hover {
     cursor: pointer;
 }
 
